--- a/app/views/groups/_account_table.html.haml
+++ b/app/views/groups/_account_table.html.haml
@@ -21,7 +21,7 @@
           %label.control-label Email
           %div.controls= f.text_field :email
         %div.control-group
-          %label.control-label Reset Password
+          %label.control-label New Password
           %div.controls= f.password_field :password
         %div.control-group
           %label.control-label Confirm Password
