--- a/app/views/paths/edit.html.haml
+++ b/app/views/paths/edit.html.haml
@@ -77,7 +77,8 @@
 
 :css
   body{ background-image: url("https://s3.amazonaws.com/moonlite-nsdub/static/Backgrounds/gplaypattern.png"); background-repeat: repeat; background-size: auto; }
-  .aboutcontainer{ width: 1000px; margin-top: -25px;}
+  .container.body {width: 980px; }
+  .aboutcontainer{ width: 980px; margin-top: -25px;}
   .aboutbox { padding: 15px 30px; }
     
 #employer.aboutcontainer
