--- a/app/views/evaluations/challenge.html.haml
+++ b/app/views/evaluations/challenge.html.haml
@@ -1,3 +1,8 @@
+:javascript
+  $(function(){
+    $('.textfill').textfill({ maxFontPixels: 24 });
+  });
+
 %div.quizcontainer{ style: "margin-top: 70px;"}
   = form_for(@task, url: took_task_url(@task), html: { id: "challenge_form", style: "margin: 0;" }) do |f|
     = hidden_field_tag "draft_redirect_uri", continue_task_evaluation_url(@evaluation, @path, @task)
@@ -5,7 +10,7 @@
     %div.CRquizspace
       %div.quizheader
         = image_tag @path.path_pic, alt: "#{@path.name}"
-        %div{ style: "display:inline-block;" }
+        .textfill{ style: "display:inline-block; width: 90%;" }
           %span
             %strong #{@path.name}
       
@@ -41,3 +46,4 @@
         $("#draft_button").click(function(){
           $("input[name=mode]").val("draft");
         });
+        
