--- a/app/views/pages/evaluator.html.haml
+++ b/app/views/pages/evaluator.html.haml
@@ -1,6 +1,6 @@
 :css
   body{ background-image: url("https://s3.amazonaws.com/moonlite-nsdub/static/Backgrounds/gplaypattern.png"); background-repeat: repeat; background-size: auto; }
-  .aboutcontainer{ width: 940px; background: rgba(36, 72, 109, 0.8); border-radius: 0; margin-top:27px;}
+  .aboutcontainer{ width: 980px; background: rgba(36, 72, 109, 0.8); border-radius: 0; margin-top:27px;}
   .aboutbox { border-radius: 0; padding: 20px; }
   
 <script src="https://raw.github.com/LeaVerou/prefixfree/gh-pages/prefixfree.min.js" type="text/javascript"></script>
@@ -139,6 +139,7 @@
               %li.price_block.popular
                 %h3 
                   %span Most Popular
+                  %br
                   2-5 Users
                 .price
                   .price_figure
@@ -171,7 +172,7 @@
                   %li Premium Support
                 .price_footer
                   = link_to "Select", new_group_path(p: Group::SIXTEEN_TO_FIFTY_PLAN), class: "action_button"
-            %div
+            %div{ style: "margin-top: -15px; "}
               %p{ style: "margin: 0; float: right;"}
                 Have more than 50 users? 
                 %a{href: "mailto:support@metabright.com?subject=Inquiry for more than 50 Evaluator users"}Contact us for pricing.
