--- a/app/views/tasks/_form.html.haml
+++ b/app/views/tasks/_form.html.haml
@@ -1,23 +1,17 @@
 - rand_id = rand(1000)
 - template_id = "template_#{rand_id}"
+- new_task = task.new_record?
+- submit_label = new_task ? "Add" : "Save"
 
-:css
-  .status { padding: 5px; border-radius: 4px; color: white; width: inherit; font-size: 14px; text-align: center; width: 400px; }
-  .error { background-color: red; }
-  .success { background-color: green; }
-
-= form_for(task, remote: true, html: { "data-type" => "html", class: "form-horizontal question_creator"}) do |f|
+= form_for(task, remote: true, html: { "data-type" => "html", class: "form-horizontal question_creator #{'new-task-form' if new_task}"}) do |f|
   = f.hidden_field :section_id
   %div.floatr
-    = f.submit "Save", id: "save_question_button", class: "button button-info button-small"
-    - if task.new_record?
-      %span#close_question_button.button.button-standard.button-small{ onclick: "clear_form();" } Clear
-    - else
+    = f.submit submit_label, id: "save_question_button", class: "button button-standard"
+    - unless new_task
       %span.button.button-standard.button-small{ onclick: "$(this).parents('td').find('div.question_display').show(); $(this).parents('.question_creator').remove();" } Close
-  %div.task_form{ style: "margin-top:10px;" }
-    .control-group
+  %div.task_form
+    .control-group{ style: "margin-bottom: 5px" }
       .controls.status.alert-error.hide
-        This is what an alert will look like.
     .control-group
       %label.control-label Question
       .controls
@@ -26,9 +20,9 @@
     .control-group
       %label.control-label Difficulty
       .controls
-        = f.select :difficulty, Task::DIFFICULTY_TYPES.collect{ |k,v| [v, k]}, class: "select"
+        = f.select :difficulty, Task::DIFFICULTY_TYPES.collect{ |k,v| [v, k]}, class: "select input-medium"
 
-    - if task.new_record? or task.multiple_choice? or task.exact?
+    - if new_task or task.multiple_choice? or task.exact?
       .multiple_choice.exact.control-group
         %label.control-label Quoted text (optional)
         .controls{ style: "margin-top: 6px;" }
@@ -39,7 +33,7 @@
     %div.row
       %div.answers{ style: "margin-left: 20px;" }
         
-        - if task.new_record?
+        - if new_task
           .control-group
             %label.control-label Answer type
             .controls.image_upload
@@ -52,7 +46,7 @@
               = f.select :answer_sub_type, hash_to_array(Task::SUBTYPES)
         
               
-        - if task.task? or task.new_record?
+        - if task.task? or new_task
           .checkin.hide
             .control-group
               %label.control-label
@@ -60,8 +54,8 @@
               .controls{ style: "width: 400px;" }
                 %p All Tasks require proof of completion in the form of a webpage. If proof of completion for the task you want to create cannot be easily obtained from a website url, consider rephrasing or changing it.
                 
-        - if task.creative? or task.new_record?
-          .creative.template_toggle{ style: (task.new_record? ? "display: none;" : "") }
+        - if task.creative? or new_task
+          .creative.template_toggle{ style: (new_task ? "display: none;" : "") }
             .creative.checkin.hide
               .control-group
                 %label.control-label
@@ -82,7 +76,7 @@
                 = text_area_tag "task[template]", task.template, class: "hidden_text_area", style: "display: none;"
                 %div{ id: template_id, class: "ace_editor", style:"width: 97%; margin: 0 auto 5px auto; min-height: 175px; position: relative; padding-top:0; #{task.template.blank? ? "display: none;" :  ""}"} 
         
-        - if task.new_record? or task.exact?
+        - if new_task or task.exact?
           .exact.hide
             .control-group
               %label.control-label
@@ -102,7 +96,7 @@
                 %div.controls
                   = f.text_field "answer_#{a.id || "new_" + (i + 1).to_s}", value: a.content, maxlength: 255, size: 75, class: (a.is_correct ? "correct_answer" : "wrong_answer")        
         
-        - unless task.new_record?
+        - unless new_task
           .control-group
             .controls
               - if sr = task.stored_resources.first
@@ -148,7 +142,7 @@
             %label.control-label Other Topic
             .controls
               = f.text_field :topic_name        
-- if task.new_record? or task.creative?
+- if new_task or task.creative?
   :javascript
     var editor = ace.edit("#{template_id}");
     editor.setTheme("ace/theme/github");    
