--- a/app/views/evaluations/grade.html.haml
+++ b/app/views/evaluations/grade.html.haml
@@ -12,6 +12,7 @@
 
 :css
   body{ background-image: url("https://s3.amazonaws.com/moonlite-nsdub/static/Backgrounds/gplaypattern.png"); background-repeat: repeat; background-size: auto; }
+  .container.body {width: 980px; }
   .aboutcontainer{ width: 980px; margin-top: 25px; border-radius: 0; }
   .header { margin: 0 0 20px 0; }
   [data-tip]:before { left: 7px; }
