--- a/app/views/pages/evaluator.html.haml
+++ b/app/views/pages/evaluator.html.haml
@@ -26,11 +26,11 @@
                 %p
                   The Evaluator helps you identify the job candidates that have the skills your company needs to perform its best. Choose from over 40 MetaBright Challenges, or create your own.
               .image.right
-                %img{ src: "http://images2.fanpop.com/image/photos/9800000/Great-Mountains-mountains-and-waterfalls-9841962-1920-1440.jpg"}
+                %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/Screenshots/create_eval_xl.jpg", style: "float:right;"}
           %section.gradient_down
             .holder.gradient_up
               .image
-                %img{ src: "http://images2.fanpop.com/image/photos/9800000/Great-Mountains-mountains-and-waterfalls-9841962-1920-1440.jpg"}
+                %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/Screenshots/create_eval_link.jpg"}
               .text.right
                 %h1
                   Expand your candidate pool.
@@ -58,7 +58,7 @@
                 %p
                   The Evaluator concisely organizes all of your candidates in a single view. Even better, you can sort and compare your candidates based on their aptitude. Try doing that with resumes.
           %section
-            .holder.gradient_up
+            .holder
               .text
                 %h1
                   Make a confident choice.
