--- a/app/views/pages/evaluator.html.haml
+++ b/app/views/pages/evaluator.html.haml
@@ -2,8 +2,15 @@
   body{ background-image: url("https://s3.amazonaws.com/moonlite-nsdub/static/Backgrounds/gplaypattern.png"); background-repeat: repeat; background-size: auto; }
   .aboutcontainer{ width: 980px; background: rgba(36, 72, 109, 0.8); border-radius: 0; margin-top:27px;}
   .aboutbox { border-radius: 0; padding: 20px; }
+  #screen_carousel { width: 700px; height: 400px; margin: 30px auto; }
+  #screen_carousel .carousel-control{ top: 50%; }
+  #screen_carousel .item img { width: 100%; height: 400px; }
   
-<script src="https://raw.github.com/LeaVerou/prefixfree/gh-pages/prefixfree.min.js" type="text/javascript"></script>
+%script{ src: "https://raw.github.com/LeaVerou/prefixfree/gh-pages/prefixfree.min.js", type: "text/javascript" }
+:javascript
+  $(function(){
+    $('#screen_carousel').carousel()
+  });
 
 #employer_product.aboutcontainer
   .aboutbox
@@ -17,6 +24,17 @@
             Optimize your sourcing
           %p.be_bold
             Never waste your time in an interview again. MetaBright's <strong>Evaluator</strong> measures and verfies the skills of your job candidates <span style="font-family: 'MuliItalic';">before</span> you interview them. Just direct your candidates to your unique MetaBright URL, and we take care of the rest. 
+          #screen_carousel.carousel.slide
+            .carousel-inner
+              .active.item
+                %img{ src: "http://media.moddb.com/images/mods/1/5/4119/17574.jpg" }
+              .item
+                %img{ src: "http://img.gawkerassets.com/img/18j1x0zv2nijtjpg/ku-xlarge.jpg" }
+              .item
+                %img{ src: "http://static.giantbomb.com/uploads/original/0/1492/1824330-homeworld2background9.jpg" }
+            %a.carousel-control.left{"data-slide" => "prev", :href => "#screen_carousel"} ‹
+            %a.carousel-control.right{"data-slide" => "next", :href => "#screen_carousel"} ›
+        
         .sexy_time
           %section
             .holder
