--- a/app/views/pages/evaluator.html.haml
+++ b/app/views/pages/evaluator.html.haml
@@ -6,6 +6,12 @@
   #screen_carousel .carousel-control{ top: 50%; }
   #screen_carousel .item img { width: 100%; height: 400px; }
   
+/Centered header
+:css
+  #employer_product .aboutheader { text-align: center; }
+  #employer_product .aboutheader h1 { margin-top: 35px; }
+  #employer_product .aboutheader img { margin-top: -5px; margin-left: -6%; height: 130px; }
+  
 %script{ src: "https://raw.github.com/LeaVerou/prefixfree/gh-pages/prefixfree.min.js", type: "text/javascript" }
 :javascript
   $(function(){
