grade page ss in

--- a/app/views/pages/evaluator.html.haml
+++ b/app/views/pages/evaluator.html.haml
@@ -37,7 +37,7 @@
               .item 
                 %img{ src: "http://img.gawkerassets.com/img/18j1x0zv2nijtjpg/ku-xlarge.jpg" } 
               .item 
-                %img{ src: "http://static.giantbomb.com/uploads/original/0/1492/1824330-homeworld2background9.jpg" } 
+                %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/Screenshots/grade_page.png" } 
             %a.carousel-control.left{"data-slide" => "prev", :href => "#screen_carousel"} ‹ 
             %a.carousel-control.right{"data-slide" => "next", :href => "#screen_carousel"} › 
          
